# siemens-microgrid

./: .gitignore  Implicit_differentiation_of_variational_quantum_algorithms  QC_Ansatz.md  QC_Ansatz_07-02.md  README.md  classical_solver.py  compare.py  cost_hamiltonian.py  dp_reformulation.tex  dp_solver.py  dp_solver_stochastic.py  dwave_annealer.py  main.tex  main_external.tex  math-model-main.tex  microgrid_dispatch_presentation.pptx  plot_data_overview.py  presentation_companion.md  pv_data.py  pyproject.toml  quantum_approach.md  qubo_model.py  reductions.tex  rolling_horizon.py  scaling_sweep.py  scenarios.py  stochastic_dp_vs_classical.md  visualize.ipynb
artifacts/: classical_vs_greedy_scaling.csv  data_with_outage.csv  gate_depth_scaling.csv  gate_depth_scaling_outage.csv  qc_rounds_sweep.csv  tts_fit_coefficients.csv  tts_fit_curve.csv  tts_rounds.csv  tts_scaling.csv
classical/: _milp_core.py  classical_solver.py  deterministic_solver.py  heuristic_dispatch.py  rolling_horizon.py  stochastic_solver.py
doc/: Basic Microgrid Dispatch Optimization Implementation Plan.md  Presentation Overview.md  QC_Ansatz.md  Quantum Microgrid Dispatch Implementation Plan.md  aproximation_ratio_instruction.md  solver_walkthrough.md  stochastic_dp_vs_classical.md  task1_allow_enforce.md  why_feasibility_cuts.md
feasible_x/: README.md  feasible_start_x.py  sample_t3.json  scenario_runner.py  subproblem.py
notebooks/: visualize.ipynb  visualize_outage.ipynb
papers for new approach/: REFERENCE.md
qc/: benders.py  dense.py  depth.py  grover_mixer.py  instance.py  (+3 more)
(+54 files in other folders)
