[project]
name = "siemens-microgrid"
version = "0.1.0"
description = "QUBO formulation for microgrid dispatch"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "dimod",
    "pvlib",
    "dwave-system",
    "matplotlib>=3.9.4",
    "ipykernel>=6.31.0",
    "plotly>=6.8.0",
    "nbformat>=5.10.4",
    "gurobipy>=12.0.3",
    "cupy-cuda12x[ctk]>=13.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
dev-dependencies = [
    "nbconvert>=7.17.1",
    "pytest",
    "qiskit>=2.2.3",
]
